<resources>
    <string name="app_name">Bazar</string>
    <string name="the_right_address_to_shopping_anyday">The Right Address \nTo Shopping\n Anyday</string>
    <string name="g_best_quality">It is now very easy to reach the \n best quality among all the \n products on the internet!</string>
    <string name="start">Start</string>
    <string name="g_the_right_address">The Right Address \n For Shopping \n Anyday</string>
    <string name="g_let_s_login">Let\'s Login</string>
    <string name="g_don_t_have_an_account_register">Don\'t have an account? Register</string>
        <string name="g_forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="loginWithGoogle">Google</string>
    <string name="loginWithFacebook">FaceBook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="letRegister">Lets\'s Register</string>
    <string name="doYouHaveAccount">Do you have an account? Login!</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_password_reset_link_on_your_email">We will send you password reset link on your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="search_now">Search Now</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
</resources>