<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/resetPassword_TV"
        style="@style/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weWillSendYou_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_will_send_you_password_reset_link_on_your_email"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPassword_TV" />

    <EditText
        android:id="@+id/resetEmail_Ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_46sdp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weWillSendYou_TV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_Btn"
        style="@style/blueButtonStyle"
        android:layout_margin="6dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetEmail_Ed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_Btn"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_Btn"
        app:layout_constraintTop_toBottomOf="@id/resetEmail_Ed" />

</androidx.constraintlayout.widget.ConstraintLayout>