<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blury_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/accountRegisterLeftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/accountRegisterRightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".92" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/accountRegisterTopGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".10" />

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_bazar_shape"
            app:layout_constraintEnd_toStartOf="@id/accountRegisterRightGuideline"
            app:layout_constraintStart_toEndOf="@id/accountRegisterLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/accountRegisterTopGuideline" />

        <TextView
            android:id="@+id/tv_letsLogin"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letRegister"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintEnd_toStartOf="@id/accountRegisterRightGuideline"
            app:layout_constraintStart_toEndOf="@id/accountRegisterLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <TextView
            android:id="@+id/tv_doYouHaveAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doYouHaveAccount"
            app:layout_constraintEnd_toStartOf="@id/accountRegisterRightGuideline"
            app:layout_constraintStart_toEndOf="@id/accountRegisterLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/tv_letsLogin" />

        <EditText
            android:id="@+id/ed_firstName"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="40dp"
            android:hint="@string/firstName"
            android:inputType="textImeMultiLine"
            app:layout_constraintEnd_toStartOf="@id/accountRegisterRightGuideline"
            app:layout_constraintStart_toEndOf="@id/accountRegisterLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/tv_doYouHaveAccount" />

        <EditText
            android:id="@+id/ed_lastName"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="16dp"
            android:hint="@string/lastName"
            android:inputType="textImeMultiLine"
            app:layout_constraintEnd_toStartOf="@id/accountRegisterRightGuideline"
            app:layout_constraintStart_toEndOf="@id/accountRegisterLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/ed_firstName" />

        <EditText
            android:id="@+id/ed_email"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:inputType="textImeMultiLine"

            app:layout_constraintEnd_toStartOf="@id/accountRegisterRightGuideline"
            app:layout_constraintStart_toEndOf="@id/accountRegisterLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/ed_lastName"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/ed_password"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textImeMultiLine"
            app:layout_constraintEnd_toStartOf="@id/accountRegisterRightGuideline"
            app:layout_constraintStart_toEndOf="@id/accountRegisterLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/ed_email"
            tools:ignore="TextFields" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/register_btn"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="6dp"
            android:text="@string/register"
            app:layout_constraintEnd_toStartOf="@id/accountRegisterRightGuideline"
            app:layout_constraintStart_toEndOf="@id/accountRegisterLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/ed_password"
            app:spinning_bar_color="@color/white" />

        <ImageView
            android:id="@+id/faceBookLogin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/facebook_login"
            app:layout_constraintEnd_toStartOf="@id/googleLogin_btn"
            app:layout_constraintStart_toEndOf="@id/accountRegisterLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/register_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginWithFacebook"
            app:layout_constraintBottom_toBottomOf="@id/faceBookLogin_btn"
            app:layout_constraintEnd_toEndOf="@id/faceBookLogin_btn"
            app:layout_constraintStart_toStartOf="@id/faceBookLogin_btn"
            app:layout_constraintTop_toTopOf="@id/faceBookLogin_btn" />

        <ImageView
            android:id="@+id/googleLogin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toStartOf="@id/accountRegisterRightGuideline"
            app:layout_constraintStart_toEndOf="@id/faceBookLogin_btn"
            app:layout_constraintTop_toBottomOf="@id/register_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginWithGoogle"
            app:layout_constraintBottom_toBottomOf="@id/googleLogin_btn"
            app:layout_constraintEnd_toEndOf="@id/googleLogin_btn"
            app:layout_constraintStart_toStartOf="@id/googleLogin_btn"
            app:layout_constraintTop_toTopOf="@id/googleLogin_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>