<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blury_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/accountOptionLeftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/accountOptionRightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".92" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/accountOptionTopGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".18" />

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_bazar_shape"
            app:layout_constraintEnd_toStartOf="@id/accountOptionRightGuideline"
            app:layout_constraintStart_toEndOf="@id/accountOptionLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/accountOptionTopGuideline" />


        <TextView
            android:id="@+id/tv_theRightDayToShopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/the_right_address_to_shopping_anyday"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@id/tv_app_name"
            app:layout_constraintStart_toStartOf="@id/tv_app_name"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <TextView
            android:id="@+id/tv_Quality"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/g_best_quality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/tv_theRightDayToShopping"
            app:layout_constraintStart_toStartOf="@id/tv_theRightDayToShopping"
            app:layout_constraintTop_toBottomOf="@id/tv_theRightDayToShopping" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/accountOptionRightGuideline"
            app:layout_constraintStart_toEndOf="@id/accountOptionLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/tv_Quality">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_btn"
                style="@style/blueButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/register" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                style="@style/blueButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>